--- a/index.html
+++ b/index.html
@@ -25,33 +25,6 @@
             <li><a href="#project" style="--i:3">Projects</a></li>
             <li><a href="#contact" style="--i:4" id="cotact">Contact</a></li>
         </ul>
-        <!-- <div class="bx bx-x" id="close-btn"></div> -->
-        
-        <!-- <div class="main-contact">
-            <div class="contact">
-                <div class="cnt-details">
-                    <a href=""></a>
-                    <div class="num">
-                        <p class="bx bxs-phone-call"></p>
-                        <h4>9876543210</h4>
-                    </div>
-                    <div class="whatsapp">
-                        <h3 class="bx bxl-whatsapp-square" style='color:#26fb03' ></h3>
-                        <a href="#">9876543210</a>
-                    </div>
-                    <div class="mail">
-                        <h3 class="bx bx-envelope" style="color: red;"></h3>
-                        <a href="#">abc123@gmail.com</a>
-                    </div>
-                </div>
-                <div class="cntct-btn">
-                    <a href="#contact" class="btn-cntct">Contact</a>
-                </div>
-            </div>
-            <div class="btn-btn-btn">
-                <button class="bx bx-x-circle" id="close-btn" ></button>
-            </div>
-        </div> -->
     </header>
     
     <section class="home" id="home">
@@ -59,11 +32,9 @@
             <div class="container-lft">
                 <div class="home-lft">
                     <div class="icon">
-                        <!-- <div class="link"> -->
                             <a href="https://www.linkedin.com/in/suneesh-s"><i class='bx bxl-linkedin'></i></a> 
                             <a href="https://www.facebook.com/suneesh.sunil.507/"><i class='bx bxl-facebook-circle' ></i></a>
                             <a href="https://www.instagram.com/suneexh?igshid=ZDdkNTZiNTM="><i class='bx bxl-instagram'></i></a>
-                        <!-- </div> -->
                     </div>
                     <div class="details">
                         <h2>Fullstack Developer</h2>
@@ -73,7 +44,7 @@
                             necessary skill for deploying and maintaining the entire application stack. 
                         </p>
                         <div class="hire">
-                            <a href="#" class="btn-btn">
+                            <a href="#contact" class="btn-btn">
                                 Hire me
                             </a>
                         </div>
@@ -192,25 +163,24 @@
         <div class="contact-me">
                 <h2 class="heading">Contact Me</h2>
                 <br><br>
-                <form action="#" class="form">
+                <form action="https://formspree.io/f/xeqwndow" method="post" class="form">
                     <div class="input-box">
-                        <input type="text" placeholder="Full name">
-                        <input type="email" placeholder="Email address">
+                        <input type="text" name="name" id="name" placeholder="Full name" required>
+                        <input type="email" name="email" id="email" placeholder="Email address" required>
                     </div>
                     <div class="input-box">
-                        <input type="number" placeholder="Mobile number">
-                        <input type="text" placeholder="Email Subject">
+                        <input type="number" name="phno" id="cno" placeholder="Mobile number" required>
+                        <input type="text" name="subject" id="sub" placeholder="Email Subject" required>
                     </div>
                     <div class="text-area">
-                        <textarea name="message" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
+                        <textarea name="message" id="msg" cols="30" rows="10" placeholder="Enter your message" required></textarea>
                     </div>
                     <div class="btn-submit">
-                        <input type="submit" value="Send" name="submit">
+                        <button type="submit">SEND</button>
                     </div>
                 </form>
         </div>
     </section>
-
 
     <script type="text/javascript" src="script.js"></script>
 
