--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="cv">
-                        <a href="#" class="btn-resume">Download CV</a>
+                        <a href="./cv/suneesh-cv.pdf" download class="btn-resume">Download CV</a>
                     </div>
                 </div>
                 
