--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </div>
     </section>
     <section class="project" id="project">
+        <h2 class="h2">PROJECT</h2>
         <div class="p-container">
             <div class="card">
                 <img src=".//images/split.png" alt="">
