--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="nav-bar">
-            <li><a href="#home" style="--i:1" class="active">Home</a></li>
-            <li><a href="#about" style="--i:2">About</a></li>
-            <li><a href="#project" style="--i:3">Projects</a></li>
+            <li><a href="#home" style="--i:1" class="active" id="hme">Home</a></li>
+            <li><a href="#about" style="--i:2" id="abt">About</a></li>
+            <li><a href="#project" style="--i:3" id="projet">Projects</a></li>
             <li><a href="#contact" style="--i:4" id="cotact">Contact</a></li>
         </ul>
     </header>
